# robotframework-appiumwindows

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  scripts.ps1  scripts.sh
AppiumLibrary/: AppiumLibrary.resource  __init__.py  appium_path.py  version.py
AppiumLibrary/keywords/: __init__.py  _actionchains.py  _applicationmanagement.py  _element.py  _element_appium.py  _logging.py  _powershell.py  _runonfailure.py  _screenrecord.py  _screenshot.py  _table.py  _waiting.py  _windows.py  keywordgroup.py
AppiumLibrary/locators/: elementfinder.py
AppiumLibrary/utils/: __init__.py  applicationcache.py  element_helper.py
docs/: AppiumLibrary.html  index.html
tests/: Example.robot  example.py  test_kw.py
tests/core/: test_actionchains_keywords.py  test_clipboard_keywords_mock.py  test_context_refactor.py  test_element_keywords.py  test_element_keywords_mock.py  test_keywordgroup.py  test_log.py  test_path_normalization.py  test_syntax.py  test_table_keywords.py
tests/e2e/: activate_app.py  clipboard.py  ext_click.py  scroll.py  test_0byte.py  test_actionchains.py  test_cmd.py  test_file.py  test_ps_limit.py  test_spaces.py  windows_open_test.py
tests/robot/: Automate_Notepad.robot
